--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,8 +3,6 @@ html(lang="en")
   head
     title Flash Cards
   body
-    header
-      h1 Flash cards
+    include includes/header.pug
     block content
-    footer
-      p An app to help you study
+    include includes/footer.pug
