--- a/views/index.pug
+++ b/views/index.pug
@@ -5,3 +5,5 @@ block content
     h2 Welcome, #{name}!
     form(action='/goodbye', method='post')
       button(type='submit') Goodbye
+    p
+      a(href='/cards/') Begin!
