--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,12 +1,8 @@
 doctype html
-html(lang="en")
+html(lang='en')
   head
     title Flash Cards
+    link(rel='stylesheet', href='stylesheets/style.css')
   body
     include includes/header.pug
-    if name
-      h2 Welcome, #{name}!
-      form(action='/goodbye', method='post')
-        button(type='submit') Goodbye
-    block content
-    include includes/footer.pug
+    block main
