--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,7 +2,7 @@ doctype html
 html(lang='en')
   head
     title Flash Cards
-    link(rel='stylesheet', href='stylesheets/style.css')
+    link(rel='stylesheet', href='../static/stylesheets/style.css')
   body
     include includes/header.pug
     block main
