complete basic app

--- a/views/card.pug
+++ b/views/card.pug
@@ -15,5 +15,5 @@ block card
           img.card-flip(src='/static/img/flip.svg')
       .card-next
         a(href='/cards')
-          img(src="static/img/next.svg")
-  script(src='/static/js/app.js')
+          img(src='/static/img/next.svg')
+  script(src='./app.js')
